--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
 .container {
   width: 1140px;
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 0 20px;
 }
 .section-title {
   text-transform: uppercase;
@@ -72,8 +72,8 @@ body {
   align-items: center;
 }
 .intro-img {
-  width: 300px;
-  height: 300px;
+  height: 400px;
+  border-radius: 10%;
 }
 .intro {
   padding: 60px 0;
@@ -142,4 +142,62 @@ h2 {
   color: #fff;
   font-size: 1.2em;
   border-radius: 8px;
+}
+.portfolio {
+  background-color: var(--accent);
+}
+.portfolio-title {
+  margin-bottom: 2em;
+  color: var(--pure-white);
+}
+.portfolio ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: grid;
+}
+.portfolio li {
+  border-radius: 10px;
+  background-color: var(--pure-white);
+  text-align: center;
+  padding-bottom: 15px;
+  overflow: hidden;
+  margin: 0 auto;
+}
+.portfolio img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+.portfolio ul a {
+  display: inline-block;
+  padding: 10px 30px;
+  color: var(--pure-white);
+  text-decoration: none;
+  background-color: var(--accent);
+  border-radius: 4px;
+  transform: all 0.3s;
+}
+.education li {
+  border-radius: 10px;
+  background-color: var(--pure-white);
+  text-align: center;
+  padding-bottom: 15px;
+  overflow: hidden;
+  margin: 0 auto;
+}
+.languages {
+  background-color: #174180;
+  color: #fff;
+}
+.languages ul {
+  margin-left: 40%;
+}
+.footer-p {
+  text-align: center;
+  font-size: 20px;
+}
+.footer-p a {
+  text-decoration: none;
+  color: #3764a7;
 }
