--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
   color: var(--accent);
 }
 .container {
-  width: 1140px;
+  width: auto;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -46,6 +46,7 @@ body {
   height: 15%;
   font-size: 30px;
   font-weight: 800;
+  margin-left: 30px;
 }
 
 .header-menu {
@@ -136,10 +137,10 @@ h3 {
 .code-example pre {
   width: 50%;
   margin: 0 auto;
-  text-align: left;
+  text-align: center;
   background-color: var(--accent);
   color: #fff;
-  font-size: 1.2em;
+  font-size: 1em;
   border-radius: 8px;
 }
 .portfolio {
@@ -200,138 +201,33 @@ h3 {
   text-decoration: none;
   color: #174180;
 }
-/* h2 {
-  text-align: center;
-} */
 
-@media (max-width: 769px) {
-  .header-menu {
+@media (max-width: 768px) {
+  .header-nav ul {
     display: none;
   }
-  button {
-    font-size: 20px;
-    float: right;
-  }
   .media-menu {
-    background-color: #174180;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 440px;
-    margin: 0 0 0 45px;
-  }
-  .intro .container {
-    width: 440px;
-    margin: 20px;
-  }
-  .intro-inner {
-    margin: 0 auto;
-  }
-  .intro-inner .intro-img {
-    height: 280px;
-  }
-  .contacts .container {
-    width: 400px;
-    margin: 15px;
-  }
-  .contacts ul {
-    display: grid;
-    gap: 5px;
-  }
-  .skills {
-    width: 490px;
-    margin: 0;
-    background-color: #174180;
-  }
-  .skills ul {
-    margin-bottom: 10px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    text-align: center;
-    border-radius: 5px;
-    width: 450px;
-  }
-  .skills h2 {
-    margin-left: 195px;
-  }
-  .skills ul li {
-    background-color: #37a778;
   }
 
-  .code-example .container {
-    width: 400px;
-    margin: 0 0 0 50px;
-  }
-
-  .code-example p {
-    font-style: normal;
-  }
-  .code-example b {
-    font-style: italic;
-  }
-  .code-example pre {
-    width: 100%;
-    margin: 0 auto;
-    text-align: left;
-    background-color: var(--accent);
-    color: #fff;
-    font-size: 1.2em;
-    border-radius: 8px;
-  }
-  .portfolio {
-    width: 500px;
-    margin: 0;
-  }
-  /* .portfolio .container {
-    margin: 0 250px 0 0;
-  } */
-  .portfolio ul {
-    margin-left: 8px;
-    justify-content: flex-start;
-  }
-  .portfolio h2 {
-    text-align: start;
-    margin-left: 164px;
-  }
-  .education {
-    width: 500px;
-    margin: 0;
-  }
-  .education .container {
-    margin: 0 auto;
-  }
-  .education li {
-    text-align: start;
-    font-size: 14px;
-    margin-left: 10px;
-  }
-  .education h2 {
-    margin-left: 150px;
-  }
-  .languages {
-    width: 500px;
-    margin: 0;
-  }
-  .languages .container {
-    margin: 0 auto;
-  }
-  .languages ul {
-    margin: 0;
-    margin-left: 100px;
-  }
-  .languages h2 {
-    margin-left: 150px;
-  }
-  .footer-p {
-    text-align: start;
-    margin-left: 70px;
+  .fa-bars {
+    font-size: 30px;
   }
 }
+@media (max-width: 471px) {
+}
 @media (min-width: 769px) {
+  .fa-bars {
+    display: none;
+  }
   button {
     display: none;
   }
-  h2 {
-    text-align: center;
+}
+@media (max-width: 418px) {
+  .container {
+    max-width: 100%;
   }
 }
