--- a/css/style.css
+++ b/css/style.css
@@ -218,11 +218,11 @@ h3 {
   } */
   .code-example pre {
     width: 100%;
-    margin: 0 auto;
-    text-align: center;
-    background-color: #174180;
-    color: #fff;
-    font-size: 1em;
+    margin: 0 30px 0 0;
+    /* text-align: center; */
+    background-color: #a0a5ad;
+    color: rgb(0, 0, 0);
+    font-size: 10px;
     border-radius: 8px;
   }
 
