--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,12 @@ h3 {
   .fa-bars {
     font-size: 30px;
   }
+  .skills li {
+    text-transform: uppercase;
+    padding: 5px 5px;
+    background-color: #3764a7;
+    border-radius: 4px;
+  }
 }
 @media (max-width: 471px) {
 }
