--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,7 @@ h3 {
     padding: 5px 5px;
     background-color: #3764a7;
     border-radius: 4px;
+    margin: 0 10px 0 10px;
   }
 }
 @media (max-width: 471px) {
