--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,7 @@ h3 {
     padding: 5px 5px;
     background-color: #3764a7;
     border-radius: 4px;
-    margin: 0 5px 0 5px;
+    margin: 5px;
     font-size: 13px;
   }
 }
